Fix #content image overflow.

--- a/_wordpress.scss
+++ b/_wordpress.scss
@@ -274,7 +274,7 @@ img {
   border: none;
 }
 
-td #content {
+#content, td {
   img {
     max-width: 100%;
     height: auto;
